--- a/javaRhythmGameMaking/Dynamic Beat/bin/.gitignore
+++ b/javaRhythmGameMaking/Dynamic Beat/bin/.gitignore
@@ -1,9 +1,12 @@
+/images/
+/music/
 /dynamic_beat_1/
 /dynamic_beat_2/
 /dynamic_beat_3/
 /dynamic_beat_4/
 /dynamic_beat_5/
-/images/
-/music/
 /dynamic_beat_6/
 /dynamic_beat_7/
+/dynamic_beat_8/
+/dynamic_beat_9/
+/dynamic_beat_10/
